--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -42,12 +42,12 @@
     background-color:#2f3e51;
       .group-box {
         height:65px;
-        .group-name{
+        &__group-name{
           font-size:15px;
           color:#ffffff;
           padding:20px 20px 0px 20px;
         }
-        .group-message{
+        &__group-message{
           font-size:11px;
           color:#ffffff;
           padding:5px 20px 40px 20px;
@@ -66,15 +66,19 @@
       justify-content:space-between;
       padding: 0px 40px;
       .left-content{
-        padding-top:35px;
-        .group-name{
+        
+        &__group-name{
           color: #333333;
           font-size:20px;
+          margin-top:35px;
         }
-        .member-name{
-          color:#999999;
-          font-size:12px;
-          padding-top:15px;
+        ul {
+          margin-top: 15px;
+          display:flex;
+          li {
+            color:#999999;
+            font-size:12px;
+          }
         }
       }
       .right-content{
@@ -101,12 +105,12 @@
         margin-bottom:46px;
         .message-info {
           display: flex;
-          .user-name {
+          &__user-name {
             font-size:16px;
             color:#333333;
             font-weight:bold;
           }
-          .date {
+          &__date {
             color:#999999;
             font-size:12px;
             padding-left:10px;
