--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,7 +2,7 @@
   .top-content
     .center-box
       %h3.user-name
-        rhyth09
+        
       .icon-box
         = link_to "#", class: "Contents__btn" do
           = icon('fa', 'edit', class: 'edit-icon')
@@ -11,7 +11,7 @@
         
   .group-list
     .group-box
-      .group-name
-        test6
-      .group-message
-        こんにちは
+      .group-list__group-box__group-name
+        
+      .group-list__group-box__group-message
+        
