--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .top-content
     .center-box
       %h3.user-name
-        
+        = current_user.name
       .icon-box
         = link_to "#", class: "Contents__btn" do
           = icon('fa', 'edit', class: 'edit-icon')
-        = link_to "#", class: "Contents__btn" do
+        = link_to edit_user_path(current_user) do
           = icon('fa', 'cog', class: 'cog-icon')
         
   .group-list
