--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,14 +4,16 @@
       %h3.user-name
         = current_user.name
       .icon-box
-        = link_to "#", class: "Contents__btn" do
+        = link_to new_group_path do
           = icon('fa', 'edit', class: 'edit-icon')
         = link_to edit_user_path(current_user) do
           = icon('fa', 'cog', class: 'cog-icon')
         
   .group-list
-    .group-box
-      .group-list__group-box__group-name
-        
-      .group-list__group-box__group-message
-        
+    - current_user.groups.each do |group|
+      .group-box
+        = link_to '#', class: 'group-box' do
+          .group-list__group-box__group-name
+            = group.name
+          .group-list__group-box__group-message
+            メッセージはまだありません
