--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,8 +12,8 @@
   .group-list
     - current_user.groups.each do |group|
       .group-box
-        = link_to '#', class: 'group-box' do
-          .group-list__group-box__group-name
+        = link_to group_messages_path(group),class: 'group-box'  do
+          .group-name
             = group.name
-          .group-list__group-box__group-message
-            メッセージはまだありません
+          .group-message
+            = group.show_last_message
