--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -44,11 +44,11 @@
         height:65px;
         color:#ffffff;
         text-decoration: none;
-        &__group-name{
+        .group-name{
           font-size:15px;
           padding:20px 20px 0px 20px;
         }
-        &__group-message{
+        .group-message{
           font-size:11px;
           padding:5px 20px 40px 20px;
         }
@@ -59,100 +59,98 @@
 .chat-main {
   background-color:#ffffff;
   width:calc(100vw - 300px);
-      .group-info{
-      height:100px;
-      background-color:#ffffff;
+  .group-info{
+    height:100px;
+    background-color:#ffffff;
+    display:flex;
+    justify-content:space-between;
+    padding: 0px 40px;
+    .left-content{
+      &__group-name{
+        color: #333333;
+        font-size:20px;
+        margin-top:35px;
+      }
+    ul {
+      margin-top: 15px;
       display:flex;
-      justify-content:space-between;
-      padding: 0px 40px;
-      .left-content{
-        
-        &__group-name{
-          color: #333333;
-          font-size:20px;
-          margin-top:35px;
-        }
-        ul {
-          margin-top: 15px;
-          display:flex;
-          li {
-            color:#999999;
-            font-size:12px;
-          }
-        }
+      li {
+        color:#999999;
+        font-size:12px;
       }
-      .right-content{
-        font-size:16px;
-        border:1px #38aef0 solid;
-        height:40px;
-        margin-top:28px;
-        padding:0px 20px;
-        display:block;
+    }
+  }
+    .right-content{
+      font-size:16px;
+      border:1px #38aef0 solid;
+      height:40px;
+      margin-top:28px;
+      padding:0px 20px;
+      display:block;
+      cursor: pointer;
+      line-height: 40px;
+      a{
+        text-decoration: none;
+        color:#38aef0;
         cursor: pointer;
-        line-height: 40px;
-        a{
-          text-decoration: none;
-          color:#38aef0;
-          cursor: pointer;
-        }
       }
     }
-    .message-list {
-      height: calc(100vh - 100px - 90px);
-      background-color:#fafafa;
-      padding: 35px 40px 0px 40px;
-      .message-box {
-        margin-bottom:46px;
-        .message-info {
-          display: flex;
-          &__user-name {
-            font-size:16px;
-            color:#333333;
-            font-weight:bold;
-          }
-          &__date {
-            color:#999999;
-            font-size:12px;
-            padding-left:10px;
-          }
-        }
-        .text {
-          margin:12px 0px 0px 0px;
-          font-size:14px;
-          color:#434a54
-        }
-      }
-    }
-    .form {
-      height:90px;
-      background-color:rgb(221,221,221);
-      padding: 20px 50px 20px 40px;
-
-      form {
+  }
+  .message-list {
+    height: calc(100vh - 100px - 90px);
+    background-color:#fafafa;
+    padding: 35px 40px 0px 40px;
+    overflow: scroll;
+    .message-box {
+      margin-bottom:46px;
+      .message-info{
         display: flex;
-        .input-box {
-          display: flex;
+        .user-name {
+          font-size: 16px;
+          color:#333333;
+          font-weight: bold;
+        }
+        .date {
+          color:#999999;
+          font-size:12px;
+          padding-left:10px;
+        }
+      }
+      .text {
+        margin:12px 0px 0px 0px;
+        font-size:14px;
+        color:#434a54;
+      }
+    }
+  }
+  .form {
+    height:90px;
+    background-color:rgb(221,221,221);
+    padding: 20px 50px 20px 40px;
+    form {
+      display: flex;
+      .input-box {
+        display: flex;
+        width: 100%;
+        position: relative;
+        &__text {
+          height: 50px;
           width: 100%;
-          position: relative;
-          &__text {
-            height: 50px;
-            width: 100%;
-            color: #434a54;
-            border-style: none;
-            padding: 0 45px 0 15px;
-          }
-          &__image {
-            font-size: 1.3rem;
-            position: absolute;
-            right: 10px;
-            line-height: 50px;
-            font-size: 25px;
-
-            &__file {
-              display: none;
-            }
+          color: #434a54;
+          border-style: none;
+          padding: 0 45px 0 15px;
+        }
+        &__image {
+          font-size: 1.3rem;
+          position: absolute;
+          right: 10px;
+          line-height: 50px;
+          font-size: 25px;
+          &__file {
+            display: none;
           }
         }
+      }
         .submit-btn {
           height: 50px;
           padding: 0 30px;
